--- a/projeto_md2/projeto8.html
+++ b/projeto_md2/projeto8.html
@@ -50,7 +50,7 @@
   <h1 class="display-4">Banda "Os Mitos"</h1>
   <p class="lead">Um pouco sobre a gente</p>
   <hr class="my-4">
-  <p>Oi pessoal, meu nome é Edu, atualmente possuo uma banda de Rock-Punk com alguns amigos de infâcia, esse ano decidimos levar nosso projeto á frente, estamos buscando apoiadores e patroninadores para inicarmos shows locais.
+  <p>Oi pessoal, meu nome é Edu, atualmente possuo uma banda de Rock-Punk com alguns amigos de infância, esse ano decidimos levar nosso projeto á frente, estamos buscando apoiadores e patroninadores para inicarmos shows locais.
    </p> 
    <img src="imagens/doa8.jpg" height="220">
    <p><b>- Como anunciar no site?</b></p>
