--- a/projeto_md2/index.html
+++ b/projeto_md2/index.html
@@ -77,7 +77,7 @@
   <h1 class="display-4">Bem vindo ao nosso site!</h1>
   <hr class="my-4">
   <p>AjudaAí é um site para conectar pessoas que precisam de doações de doadores em potencial, nosso site não faz cobra valores para publica anúncios e nem taxas para doação, somos apenas responsável pela conexão entre ambos os elos.</p>
-  <a class="btn btn-primary btn-lg" href="sobre.html" role="button">Leia mais</a>
+  <a class="btn btn-primary btn-lg" href="sobre.html" role="button">Conheça a gente!</a>
 </div>
 
 
