--- a/projeto_md2/edu.html
+++ b/projeto_md2/edu.html
@@ -63,21 +63,12 @@
       <!---Cards------>
       <center>
 
-      <div class="row">
-        <div class="card" style="width: 18rem;">
-          <img class="card-img-top" src="imagens/pro1.jpg" alt="Imagem de capa do card">
-          <div class="card-body">
-            <h5 class="card-title">Abrigo Snoop</h5>
-            <p class="card-text">Ajude o abrigo Snoop</p>
-            <a href="projeto1.html" class="btn btn-primary">Visitar</a>
-          </div>
-        </div>
 
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="imagens/pro2.jpg" alt="Imagem de capa do card">
           <div class="card-body">
             <h5 class="card-title">Casa Cultural Silva</h5>
-            <p class="card-text">Colabore com a Efígenia para manter as atividades da Casa Cultural</p>
+            <p class="card-text">Colabore para manter as atividades da Casa Cultural</p>
             <a href="projeto2.html" class="btn btn-primary">Visitar</a>
           </div>
         </div>
@@ -101,44 +92,6 @@
         </div>
     </div>
 
-
-    <div class="row">
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="imagens/pro5.jpg" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Reforma de um Carro Clássico</h5>
-          <p class="card-text">Ajude Kazu á reformar um carro</p>
-          <a href="projeto5.html" class="btn btn-primary">Visitar</a>
-        </div>
-      </div>
-
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="imagens/pro6.jpg" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Limpeza de Orla da praia</h5>
-          <p class="card-text">Una-se a outras pessoas na limpeza da praia</p>
-          <a href="projeto6.html" class="btn btn-primary">Visitar</a>
-        </div>
-      </div>
-
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="imagens/pro7.jpg" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Ações contra a seca</h5>
-          <p class="card-text">Projeto movido por estudantes do interior para diminuir os efeitos da seca</p>
-          <a href="projeto7.html" class="btn btn-primary">Visitar</a>
-        </div>
-      </div>
-
-      <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="imagens/pro8.jpg" alt="Imagem de capa do card">
-        <div class="card-body">
-          <h5 class="card-title">Grupo Musical</h5>
-          <p class="card-text">Seja apoiador de uma banda de Rock</p>
-          <a href="projeto8.html" class="btn btn-primary">Visitar</a>
-        </div>
-      </div>
-  </div>
   </center>
 
 
