--- a/projeto_md2/contato.html
+++ b/projeto_md2/contato.html
@@ -10,7 +10,7 @@
 <body>
 <!----Barra de navegação----->
 <nav class="navbar navbar-light" style="background-color: #0c97fa4e;">
-    <a class="navbar-brand" href="index.html">AjudaAí</a>
+    <a class="navbar-brand h1 mb-0" href="index.html">AjudaAí</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -59,6 +59,10 @@
     </select>
 </div>
 
+<div class="form-group row">
+  <label for="inputEmail3" class="col-sm-2 col-form-label">Assunto ou Código</label>
+  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+</div>
     <div class="form-group">
       <label for="exampleFormControlTextarea1">Digite sua mensagem</label>
       <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
