--- a/projeto_md2/projeto4.html
+++ b/projeto_md2/projeto4.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!----Barra de navegação----->
-<nav class="navbar navbar-light" style="background-color: #0c97fa4e;">
+<nav class="navbar navbar-dark bg-dark" style="background-color: #0c97fa4e;">
     <a class="navbar-brand" href="index.html">AjudaAí</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
@@ -53,6 +53,15 @@
   <p>O Nosso projeto é a doação de computadores para Estudantes da Rede publica que devido a pandemia de COVID-19 e transição para o modelo EAD estão sem assistir aulas.
    </p> 
    <img src="imagens/doa4.jpg" height="220">
+
+   <div class="alert alert-success" role="alert">
+    <h4 class="alert-heading">Obrigado por ver esse projeto!</h4>
+    <p> Agora logo abaixo é possível ver as forma de entrar em contato com o dono do projeto, se quiser você também pode enviar um contato com o a gente com "#0008" para entrarmos em contato!</p>
+    <hr>
+    <p class="mb-0">Castro: Telefone: (55)9891-5555 // E-mail: cas.troa@GGemail.com</p>
+    <p class="mb-0">William: Telefone: (56)9871-5875 // E-mail: willian.gomez@GGemail.com</p>
+  </div>
+
    <p><b>- Como anunciar no site?</b></p>
    <p>Para anunciar em nosso site é preciso entre em contato com a gente por formulário  (disponível aqui), após analisamos o projeto entramos em contato para ser adicionado ao site.
     </p>
