--- a/projeto_md2/projeto8.html
+++ b/projeto_md2/projeto8.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!----Barra de navegação----->
-<nav class="navbar navbar-light" style="background-color: #0c97fa4e;">
+<nav class="navbar navbar-dark bg-dark" style="background-color: #0c97fa4e;">
     <a class="navbar-brand" href="index.html">AjudaAí</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
@@ -53,9 +53,20 @@
   <p>Oi pessoal, meu nome é Edu, atualmente possuo uma banda de Rock-Punk com alguns amigos de infância, esse ano decidimos levar nosso projeto á frente, estamos buscando apoiadores e patroninadores para inicarmos shows locais.
    </p> 
    <img src="imagens/doa8.jpg" height="220">
+  
+   <div class="alert alert-success" role="alert">
+    <h4 class="alert-heading">Obrigado por ver esse projeto!</h4>
+    <p> Agora logo abaixo é possível ver as forma de entrar em contato com o dono do projeto, se quiser você também pode enviar um contato com o a gente com "#0008" para entrarmos em contato!</p>
+    <hr>
+    <p class="mb-0">Edu: Telefone: (55)5555-5555 // E-mail: edu@GGemail.com</p>
+  </div>
+
+
+
    <p><b>- Como anunciar no site?</b></p>
    <p>Para anunciar em nosso site é preciso entre em contato com a gente por formulário  (disponível aqui), após analisamos o projeto entramos em contato para ser adicionado ao site.
     </p>
+
 </div>
 
 <!----barra de contato-->
