--- a/projeto_md2/projetos.html
+++ b/projeto_md2/projetos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!----Barra de navegação----->
-<nav class="navbar navbar-light" style="background-color: #0c97fa4e;">
+<nav class="navbar navbar-dark bg-primary" style="background-color: #0c97fa4e;">
     <a class="navbar-brand" href="index.html">AjudaAí</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
