--- a/projeto_md2/index.html
+++ b/projeto_md2/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!----Barra de navegação----->
-    <nav class="navbar navbar-light" style="background-color: #0c97fa4e;">
+    <nav class="navbar navbar-dark bg-primary" style="background-color: #0c97fa4e;">
         <a class="navbar-brand" href="index.html">AjudaAí</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
@@ -45,10 +45,12 @@
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-100" src="imagens/bannerdestaque1.jpg" alt="Primeiro Slide">
+           
+             <a href="edu.html" target="_blank"><img class="d-block w-100" src="imagens/bannerdestaque1.jpg" alt="Primeiro Slide"></a>
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="imagens/bannerdestaque2.jpg" alt="Segundo Slide">
+
+            <a href="ani.html" target="_blank"><img class="d-block w-100" src="imagens/bannerdestaque2.jpg" alt="Segundo Slide"></a>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="imagens/bannerdestaque3.jpg" alt="Terceiro Slide">
