--- a/projeto_md2/projeto2.html
+++ b/projeto_md2/projeto2.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!----Barra de navegação----->
-<nav class="navbar navbar-light" style="background-color: #0c97fa4e;">
+<nav class="navbar navbar-dark bg-dark" style="background-color: #0c97fa4e;">
     <a class="navbar-brand" href="index.html">AjudaAí</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
@@ -50,9 +50,20 @@
   <h1 class="display-4">Casa Cultural Silva</h1>
   <p class="lead">Um pouco sobre a gente</p>
   <hr class="my-4">
-  <p>A Casa cultural Silva é localizada em Salvado/BA e promove projetos para incentivar as artes nas camadas mais vulneráveis da socidade.
+  <p>A Casa cultural Silva é localizada em Salvador/BA e promove projetos para incentivar as artes nas camadas mais vulneráveis da socidade.
    </p> 
    <img src="imagens/doa2.jpg" height="220">
+
+   <div class="alert alert-success" role="alert">
+    <h4 class="alert-heading">Obrigado por ver esse projeto!</h4>
+    <p> Agora logo abaixo é possível ver as forma de entrar em contato com o dono do projeto, se quiser você também pode enviar um contato com o a gente com "#0008" para entrarmos em contato!</p>
+    <hr>
+    <p class="mb-0">Leôncio: Telefone: (75)9891-8588 // E-mail: lele.on@GGemail.com</p>
+    <p class="mb-0">Fernando: Telefone: (75)9871-1212 // E-mail: fer.alves@GGemail.com</p>
+  </div>
+
+
+
    <p><b>- Como anunciar no site?</b></p>
    <p>Para anunciar em nosso site é preciso entre em contato com a gente por formulário  (disponível aqui), após analisamos o projeto entramos em contato para ser adicionado ao site.
     </p>
