--- a/projeto_md2/projeto3.html
+++ b/projeto_md2/projeto3.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!----Barra de navegação----->
-<nav class="navbar navbar-light" style="background-color: #0c97fa4e;">
+<nav class="navbar navbar-dark bg-dark" style="background-color: #0c97fa4e;">
     <a class="navbar-brand" href="index.html">AjudaAí</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
       <span class="navbar-toggler-icon"></span>
@@ -53,6 +53,15 @@
   <p>A Biblioteca comunitária de Messejana promove vários projetos na comunidade.
    </p> 
    <img src="imagens/doa3.jpg" height="220">
+
+   <div class="alert alert-success" role="alert">
+    <h4 class="alert-heading">Obrigado por ver esse projeto!</h4>
+    <p> Agora logo abaixo é possível ver as forma de entrar em contato com o dono do projeto, se quiser você também pode enviar um contato com o a gente com "#0008" para entrarmos em contato!</p>
+    <hr>
+    <p class="mb-0">Jorge: Telefone: (78)9897-5555 // E-mail: jorgez.75@y-mail.com</p>
+    <p class="mb-0">Clara: Telefone: (78)8581-5875 // E-mail: clarxa.18@rsrs-mail.com</p>
+  </div>
+
    <p><b>- Como anunciar no site?</b></p>
    <p>Para anunciar em nosso site é preciso entre em contato com a gente por formulário  (disponível aqui), após analisamos o projeto entramos em contato para ser adicionado ao site.
     </p>
