--- a/projeto_md2/index.html
+++ b/projeto_md2/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AjudaAí - Página Inicial</title>
+    <link rel = "icon" href = "imagens/icone.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
@@ -80,7 +81,17 @@
   <hr class="my-4">
   <p>AjudaAí é um site para conectar pessoas que precisam de doações de doadores em potencial, nosso site não faz cobra valores para publica anúncios e nem taxas para doação, somos apenas responsável pela conexão entre ambos os elos.</p>
   <a class="btn btn-primary btn-lg" href="sobre.html" role="button">Conheça a gente!</a>
+
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+ Créditos do site/projeto <a href="creditos.html">AQUI</a>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
+
+</div>
+
+
 
 
 <nav class="navbar fixed-bottom navbar-light bg-light">
