--- a/projeto_md2/projetos.html
+++ b/projeto_md2/projetos.html
@@ -44,26 +44,13 @@
     </ol>
   </nav>
 
-  <!-----numerador de páginas-->
 
-<nav aria-label="Navegação de página exemplo">
-  <ul class="pagination justify-content-end">
-    <li class="page-item disabled">
-      <a class="page-link" href="#" tabindex="-1">Anterior</a>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
-    <li class="page-item">
-      <a class="page-link" href="#">Próximo</a>
-    </li>
-  </ul>
-</nav>
 
 
       <!---Cards------>
       <center>
 
+ <div class="col d-flex justify-content-center">
       <div class="row">
         <div class="card" style="width: 18rem;">
           <img class="card-img-top" src="imagens/pro1.jpg" alt="Imagem de capa do card">
@@ -140,8 +127,8 @@
         </div>
       </div>
   </div>
-  </center>
-
+</div>
+</center>
 
 
 
