--- a/projeto_md2/index.html
+++ b/projeto_md2/index.html
@@ -36,8 +36,8 @@
           </form>
         </div>
       </nav>
-
-    <! Carrousel/Exibir slides---->
+      
+    <!---Carrousel/Exibir slides---->
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -90,7 +90,6 @@
 </div>
 
 </div>
-
 
 
 
