--- a/projeto_md2/contato.html
+++ b/projeto_md2/contato.html
@@ -37,6 +37,7 @@
     </div>
   </nav>
 
+  <div class="col d-flex justify-content-center">
   <form>
     <div class="form-group">    
         
@@ -61,7 +62,7 @@
 </div>
 
 <div class="form-group row">
-  <label for="inputEmail3" class="col-sm-2 col-form-label">Assunto ou Código</label>
+  <label for="inputEmail3" class="col-sm-2 col-form-label">Assunto/Código</label>
   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
 </div>
     <div class="form-group">
@@ -82,7 +83,7 @@
 
 
   </form>
-
+</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
