--- a/projeto_md2/index.html
+++ b/projeto_md2/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <!----Barra de navegação----->
-    <nav class="navbar navbar-dark bg-primary" style="background-color: #0c97fa4e;">
+    <nav class="navbar navbar-light" style="background-color: #088ff08b;">
         <a class="navbar-brand" href="index.html">AjudaAí</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
           <span class="navbar-toggler-icon"></span>
@@ -22,12 +22,12 @@
               <a class="nav-link" href="index.html">Home <span class="sr-only">(página atual)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projetos.html" target="_blank" >Projetos</a>
+              <a class="nav-link" href="projetos.html">Projetos</a>
             </li>
             <li class="nav-item dropdown">
 
             <li class="nav-item">
-              <a class="nav-link" href="sobre.html" target="_blank" >Sobre a gente!</a>
+              <a class="nav-link" href="sobre.html">Sobre a gente!</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
@@ -91,15 +91,6 @@
 
 </div>
 
-
-
-<nav class="navbar fixed-bottom navbar-light bg-light">
-    <a class="navbar-brand" href="contato.html">Fale com a gente!</a>
-  </nav>
-
-
-
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -107,16 +98,67 @@
 
 
 
-    <div class="footer-basic">
-        <footer>
-            <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-            <ul class="list-inline">
-                <li class="list-inline-item"><a href="index.html">Página Inicial</a></li>
-                <li class="list-inline-item"><a href="sobre.html">Sobre</a></li>
-                <li class="list-inline-item"><a href="privacidade.html">Política de Privacidade</a></li>
-            </ul>
-            <p class="copyright">Company Name © 2018</p>
-        </footer>
+<!-- Footer -->
+<footer class="page-footer font-small blue pt-4">
+
+  <!-- Footer Links -->
+  <div class="container-fluid text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-6 mt-md-0 mt-3">
+
+        <!-- Content -->
+        <h5 class="text-uppercase">AjudaAí © 2021</h5>
+        <p>AjudaAí é um site de conexão de projetos e doadores.</p>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none pb-3">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+
+
+      </div>
+      <!-- Grid column -->
+
+      <!-- Grid column -->
+      <div class="col-md-3 mb-md-0 mb-3">
+
+        <!-- Links -->
+        <h5 class="text-uppercase">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="index.html">Página Inicial</a>
+          </li>
+          <li>
+            <a href="privacidade.html">Política de Privacidade</a>
+          </li>
+          <li>
+            <a href="sobre.html">Sobre</a>
+          </li>
+          <li>
+            <a href="contato.html">Contato</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
     </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+</footer>
+<!-- Footer -->
 </body>
 </html>
