--- a/projeto_md2/contato.html
+++ b/projeto_md2/contato.html
@@ -38,7 +38,7 @@
   </nav>
 
   <div class="col d-flex justify-content-center">
-  <form>
+  <form action="formDados.php" method="POST">
     <div class="form-group">    
         
         <div class="form-group">
@@ -63,7 +63,7 @@
 
 <div class="form-group row">
   <label for="inputEmail3" class="col-sm-2 col-form-label">Assunto/Código</label>
-  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
+  <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="">
 </div>
     <div class="form-group">
       <label for="exampleFormControlTextarea1">Digite sua mensagem</label>
