--- a/projeto_md2/creditos.html
+++ b/projeto_md2/creditos.html
@@ -43,8 +43,13 @@
           Alguns icones e ferramentas © 2020 Copyright:<a href="MDBootstrap.com">MDBootstrap.com</a>
         </div>
 
-
+        <div class="alert alert-info" role="alert">
+          Alguns icones e ferramentas © 2021 Copyright:<a href="https://freefrontend.com/">www.freefrontend.com/</a>
+        </div>
 </section>
+
+<!---Cards crédito-->
+
       
 
 
