--- a/projeto_md2/phpIndex.html
+++ b/projeto_md2/phpIndex.html
@@ -120,20 +120,12 @@
     </div>
 
     <div class='col-3'>
-
-         <div class='card'>
-              ...
+      <!----Futuro card-->
          </div>
 
     </div>
 
 </div>
-
-
-
-
-
-
 
 <center>
 
