--- a/projeto_md2/projetos.html
+++ b/projeto_md2/projetos.html
@@ -174,7 +174,7 @@
       <div class="col-md-6 mt-md-0 mt-3">
 
         <!-- Content -->
-        <h5 class="text-uppercase">AjudaAí © 2021</h5>
+        <h5 class="text-uppercase">AjudaAí © 2021 - 2022</h5>
         <p>AjudaAí é um site de conexão de projetos e doadores.</p>
 
       </div>
