--- a/projeto_md2/phpLogin.html
+++ b/projeto_md2/phpLogin.html
@@ -68,6 +68,11 @@ alert("Sistema Indisponível no momento :(");
     </div>
   </div>
 </section>
+<br>
+<div class="alert alert-info" role="alert">
+  Para voltar ao portal <a href="index.html" class="alert-link">CLIQUE AQUI</a>.
+</div>
+
 </center>
 
 
